Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61510

demobrowser fails to build without print support

    XMLWordPrintable

Details

    Description

      Qt was configured without printing and cups:

      …
      Qt PrintSupport:
        CUPS ................................... no
      …
      Qt WebEngine:
        Embedded build ......................... yes
        Pepper Plugins ......................... no
        Printing and PDF ....................... no
      

      And then the demobrowser example fails to build:

      /tmp/e2/build/qt-everywhere-opensource-src-5.9.0/qtwebengine/examples/webenginewidgets/demobrowser/browsermainwindow.cpp:776: undefined reference to `QWebEnginePage::print(QPrinter*, QWebEngineCallback<bool> const&)'
      

      Attachments

        Activity

          People

            juri.valdmann Jüri Valdmann (Inactive)
            rebemlix Rolf Eike Beer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: